# HcSPARSE

./: CMakeLists.txt  README.md  build.sh  clean.sh  install.sh  uninstall.sh
cmake/: FindHC++.cmake
gtest/src/: CMakeLists.txt  axpby_double_test.cpp  axpby_float_test.cpp  axpy_double_test.cpp  axpy_float_test.cpp  bicgStab_diagonal_double_test.cpp  bicgStab_diagonal_float_test.cpp  bicgStab_noprecond_double_test.cpp  cg_diagonal_double_test.cpp  cg_diagonal_float_test.cpp  cg_noprecond_double_test.cpp  coo2csr_float_test.cpp  csr2coo_float_test.cpp  csr_dense_conv_double_test.cpp  csr_dense_conv_float_test.cpp  csrmm_double_test.cpp  csrmm_float_test.cpp  csrmv_adaptive_double_test.cpp  csrmv_double_test.cpp  csrmv_float_test.cpp  dot_double_test.cpp  dot_float_test.cpp  nrm1_float_test.cpp  nrm2_float_test.cpp  reduce_double_test.cpp  reduce_float_test.cpp  reduce_int_test.cpp  scale_double_test.cpp  spcsrmm_float_test.cpp  transform_double_test.cpp  transform_float_test.cpp
lib/include/: hcsparse.h  hcsparse_struct.h  hipsparse.h  mmio_wrapper.h
lib/include/hcc_detail/: hip_sparse.h
lib/include/nvcc_detail/: hip_sparse.h
lib/src/: CMakeLists.txt  csrmv.hpp  hcsparse.cpp  hcsparse_init.cpp  hcsparse_struct.h
lib/src/blas1/: elementwise-operators.h  elementwise-transform.h  hcdense-axpby.h  hcdense-axpy.h  hcdense-dot.h  hcdense-nrm1.h  hcdense-nrm2.h  hcdense-reduce.h  hcdense-scale.h  hcsparse-dot.h  reduce-operators.h
lib/src/blas2/: csr_meta.h  csrmv.h
lib/src/blas3/: csrmm.h  hcsparse-spAdd.h  hcsparse-spm-bitonic-kernel.h  hcsparse-spm-spm.h
lib/src/hcc_detail/: hipsparse.cpp
lib/src/include/: hcsparse.h  hcsparse_struct.h
lib/src/io/: mm_reader.h
lib/src/nvcc_detail/: hipsparse.cpp
lib/src/solvers/: biconjugate-gradients-stabilized.h  conjugate-gradients.h  solver-control.h
lib/src/solvers/preconditioners/: diagonal.h  preconditioner.h  preconditioner_utils.h  void.h
lib/src/transform/: conversion-utils.h  hcsparse-coo2csr.h  hcsparse-csr2coo.h  hcsparse-csr2dense.h  hcsparse-dense2csc.h  hcsparse-dense2csr.h  reduce-by-key.h  scan.h
packaging/: CMakeLists.txt
packaging/debian/: postinst.in  prerm.in
source/: CMakeLists.txt  csr_meta.hpp  csrmv.hpp  hcsparse.h  hcsparse_init.cpp  hcsparse_struct.h  mm_reader.hpp  scale.hpp
source/blas1/: elementwise-operators.cpp  elementwise-operators.h  elementwise-transform.h  hcdense-axpby.cpp  hcdense-axpby.h  hcdense-reduce.h  hcdense-scale.cpp  hcdense-scale.h  reduce-operators.h
source/test/: CMakeLists.txt  axpby_double_test.cpp  axpby_float_test.cpp  axpy_double_test.cpp  reduce_double_test.cpp  reduce_float_test.cpp  reduce_int_test.cpp  scale_double_test.cpp  scale_float_test.cpp  scale_test.cpp  transform_float_test.cpp
test/: CMakeLists.txt
test/gtest/src/: CMakeLists.txt  axpby_double_test.cpp  axpby_float_test.cpp  axpy_double_test.cpp  axpy_float_test.cpp  bicgStab_diagonal_double_test.cpp  bicgStab_diagonal_float_test.cpp  bicgStab_noprecond_double_test.cpp  bicgStab_noprecond_float_test.cpp  cg_diagonal_double_test.cpp  cg_diagonal_float_test.cpp  cg_noprecond_double_test.cpp  cg_noprecond_float_test.cpp  coo2csr_float_test.cpp  csr2coo_float_test.cpp  csr_dense_conv_double_test.cpp  csr_dense_conv_float_test.cpp  csrmm_double_test.cpp  csrmm_float_test.cpp  csrmv_adaptive_double_test.cpp  csrmv_adaptive_float_test.cpp  csrmv_double_test.cpp  csrmv_float_test.cpp  dot_double_test.cpp  dot_float_test.cpp  nrm1_float_test.cpp  nrm2_float_test.cpp  reduce_double_test.cpp  reduce_float_test.cpp  reduce_int_test.cpp  scale_double_test.cpp  scale_float_test.cpp  spcsrmm_float_test.cpp  transform_double_test.cpp  transform_float_test.cpp
test/src/: CMakeLists.txt  axpby_double_test.cpp  axpby_float_test.cpp  axpy_double_test.cpp  axpy_float_test.cpp  bicgStab_diagonal_double_test.cpp  bicgStab_diagonal_float_test.cpp  bicgStab_noprecond_double_test.cpp  bicgStab_noprecond_float_test.cpp  biconjugate-gradients-stabilized_test.cpp  cg_diagonal_double_test.cpp  cg_diagonal_float_test.cpp  cg_noprecond_double_test.cpp  cg_noprecond_float_test.cpp  coo2csr_float_test.cpp  csr2coo_float_test.cpp  csr_dense_conv_double_test.cpp  csr_dense_conv_float_test.cpp  csrmm_double_test.cpp  csrmm_float_test.cpp  csrmv_adaptive_double_test.cpp  csrmv_adaptive_float_test.cpp  csrmv_double_test.cpp  csrmv_float_test.cpp  csrmv_test.cpp  dense2csr_double_test.cpp  dense2csr_float_test.cpp  dot_double_test.cpp  dot_float_test.cpp  input.mtx  nrm1_float_test.cpp  nrm2_float_test.cpp  reduce_double_test.cpp  reduce_float_test.cpp  reduce_int_test.cpp  scale_double_test.cpp  scale_float_test.cpp  spcsrmm_float_test.cpp  transform_double_test.cpp  transform_float_test.cpp
test/unit-API/src/: CMakeLists.txt  csc_dense_double_test_API.cpp  csc_dense_float_test_API.cpp  csr_coo_conv_float_test_API.cpp  csr_dense_conv_double_test_API.cpp  csr_dense_conv_float_test_API.cpp  csrmm_double_test_API.cpp  csrmm_float_test_API.cpp  dot_double_test_API.cpp  dot_float_test_API.cpp  nnz_double_test_API.cpp  nnz_float_test_API.cpp
test/unit_test/src/: CMakeLists.txt  axpby_double_test.cpp  axpby_float_test.cpp  axpy_double_test.cpp  axpy_float_test.cpp  bicgStab_diagonal_double_test.cpp  bicgStab_diagonal_float_test.cpp  bicgStab_noprecond_double_test.cpp  bicgStab_noprecond_float_test.cpp  cg_diagonal_double_test.cpp  cg_diagonal_float_test.cpp  cg_noprecond_double_test.cpp  cg_noprecond_float_test.cpp  coo2csr_float_test.cpp  csr2coo_float_test.cpp  csr_dense_conv_double_test.cpp  csr_dense_conv_float_test.cpp  csrmm_double_test.cpp  csrmm_float_test.cpp  csrmv_adaptive_double_test.cpp  csrmv_adaptive_float_test.cpp  csrmv_double_test.cpp  csrmv_float_test.cpp  dot_double_test.cpp  dot_float_test.cpp  nnz_double_test.cpp  nnz_float_test.cpp  nrm1_float_test.cpp  nrm2_float_test.cpp  reduce_double_test.cpp  reduce_float_test.cpp  reduce_int_test.cpp  scale_double_test.cpp  scale_float_test.cpp  spcsram_float_test.cpp  spcsrmm_float_test.cpp  transform_double_test.cpp  transform_float_test.cpp
(+15 files in other folders)
