# Object libraries require CMAKE 2.8.8 version 
CMAKE_MINIMUM_REQUIRED (VERSION 2.8.8) 
MESSAGE(STATUS "CMAKE VERSION ${CMAKE_VERSION}")

#Setting a Project name
SET(PROJECT_NAME "libhcsparse")
PROJECT (${PROJECT_NAME})
MESSAGE(STATUS "PROJECT NAME    : ${PROJECT_NAME}")

#Setting a variable for source files
SET (SRCS hcsparse.cpp)

SET (PREFIX "$ENV{MCWCPPAMPBUILD}")
SET (CLANG_AMP "${PREFIX}/compiler/bin/clang++")
SET (CLAMP_CONFIG "${PREFIX}/build/Release/bin/clamp-config")

execute_process(COMMAND ${CLAMP_CONFIG} --build --cxxflags
                            OUTPUT_VARIABLE CLAMP_CXXFLAGS)

string(STRIP "${CLAMP_CXXFLAGS}" CLAMP_CXXFLAGS)
set (CLAMP_CXXFLAGS "${CLAMP_CXXFLAGS}")

execute_process(COMMAND ${CLAMP_CONFIG} --build --ldflags --shared
                            OUTPUT_VARIABLE CLAMP_LDFLAGS)

string(STRIP "${CLAMP_LDFLAGS}" CLAMP_LDFLAGS)
set (CLAMP_CXXFLAGS "${CLAMP_CXXFLAGS} -Wall -Wno-deprecated-register -Wdeprecated-declarations")
set (CLAMP_LDFLAGS "${CLAMP_LDFLAGS}")

FOREACH(src_file ${SRCS})
  SET_PROPERTY(SOURCE ${src_file} APPEND_STRING PROPERTY COMPILE_FLAGS " ${CLAMP_CXXFLAGS}")
ENDFOREACH()

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
SET_PROPERTY(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS " ${CLAMP_LDFLAGS}")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
